# WIA-scanner.js

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  WIADeviceMgr.cpp  WIADeviceMgr.h  asyncEvent.cpp  asyncEvent.h  dllmain.cpp  index.js  main.cpp  package-lock.json  package.json  stdafx.cpp  stdafx.h  utils.cpp  utils.h
test/: doTest.js  package-lock.json  package.json
